--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "flink-sql-workbench",
   "displayName": "Flink SQL Workbench",
   "description": "VS Code extension for editing and executing Flink SQL with gateway session management (Avichay Marciano, Iulius Hutuleac)",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "license": "MIT",
-  "engines": {
-    "vscode": "^1.103.0"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/giulio1979/flink-sql-workbench-vsce.git"
   },
   "categories": [
     "Data Science",
     "Other"
   ],
+  "engines": {
+    "vscode": "^1.103.0",
+    "code-server": "^4.0.0"
+  },
   "main": "./dist/extension.js",
   "publisher": "IuliusHutuleac",
   "contributes": {
