--- a/package.json
+++ b/package.json
@@ -436,6 +436,9 @@
     "lint": "eslint src",
     "test": "vscode-test"
   },
+  "dependencies": {
+    "sql-formatter": "^10.0.0"
+  },
   "devDependencies": {
     "@types/mocha": "^10.0.10",
     "@types/nock": "^10.0.3",
